--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react": "^19.0.0-rc.1",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^19.0.0-rc.1",
+    "react-draggable": "^4.5.0",
     "react-google-recaptcha": "^3.1.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.0.7",
+    "tailwind": "^4.0.0",
     "tsparticles": "^2.12.0",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
